2005-09-17	Istvan Varga	<ivarga@csounds.com>
	* Engine/namedins.c:
	  started to implement bus with named channels; this is not
	  complete yet
	* Engine/oload.c, Engine/otran.c, Top/csound.c:
	  moved some parts of oload.c to otran.c while others to csound.c
	  removed oload.c
	* H/csound.h, H/csoundCore.h:
	  new API functions, and variables in CSOUND structure
	* Engine/otran.c, Top/csmodule.c, Top/csound.c, Top/utility.c:
	  improved warning message for undefined OPCODEDIR/OPCODEDIR64
	* Top/csound.c, Top/one_file.c:
	  new command line flag (-+ignore_csopts) to disable the use of
	  options specified in a CSD file
	  one_file.c: minor fixes in parsing CSD files

2005-09-01	Michael Gogins	<gogins@pipeline.com>
	* Added CsoundVST.Soundfile wrapper class for Python access
	to libsndfile.

2005-09-01	Istvan Varga	<ivarga@csounds.com>
	* Top/csmodule.c:
	  revised code for loading plugin libraries
	  new function: csoundModuleInfo() can be used in plugin libraries to
	  allow for checking API version and MYFLT type
	* Top/dl_opcodes.c:
	  merged into csmodule.c; removed file
	* Engine/oload.c, H/csoundCore.h, OOps/ugens3.c, OOps/ugens5.c:
	  removed static variables from ugens3.c and ugens5.c
	* Top/csound.c:
	  removed adsyn/lpc RESET routines that are no longer needed
	* Opcodes/hrtferX, Opcodes/natben.c, Top/natben.c, SConstruct:
	  removed unused endianness conversion code
	* SConstruct:
	  fixed bug that broke building libcsound as a shared library

2005-08-30	Istvan Varga	<ivarga@csounds.com>
	* Opcodes/ugnorman.c:
	  renamed opcodes from ats* to ATS* to avoid namespace pollution

2005-08-28	Istvan Varga	<ivarga@csounds.com>
	* Opcodes/ugnorman.c, Opcodes/ugnorman.h: new opcodes

2005-08-22	Istvan Varga	<ivarga@csounds.com>
	* Engine/musmon.c, H/csound.h, InOut/libsnd.c, Top/csound.c:
	  new API function: csoundSetHostImplementedAudioIO()
	  allows the host application to implement sound I/O with
	  direct access to the spin/spout buffers (or, with a non-zero