@@ -411,6 +411,48 @@ OENTRY opcodlst_2[] = {
  { "loop_le.k", S(LOOP_OPS),  1,  "", "kkkl", NULL, (SUBR) loop_le_p, NULL  },
  { "loop_g.k",  S(LOOP_OPS),  1,  "", "kkkl", NULL, (SUBR) loop_g_p, NULL   },
  { "loop_ge.k", S(LOOP_OPS),  1,  "", "kkkl", NULL, (SUBR) loop_ge_p, NULL  },
+ {  "chnget",      0xFFFF,              0,      NULL,           NULL,
+    (SUBR) NULL, (SUBR) NULL, (SUBR) NULL                               },
+ {  "chnget.i",    S(CHNGET),           1,      "i",            "S",
+    (SUBR) chnget_opcode_init_i, (SUBR) NULL, (SUBR) NULL               },
+ {  "chnget.k",    S(CHNGET),           3,      "k",            "S",
+    (SUBR) chnget_opcode_init_k, (SUBR) notinit_opcode_stub, (SUBR) NULL },
+ {  "chnget.a",    S(CHNGET),           5,      "a",            "S",
+    (SUBR) chnget_opcode_init_a, (SUBR) notinit_opcode_stub, (SUBR) NULL },
+ {  "chnget.S",    S(CHNGET),           1,      "S",            "S",
+    (SUBR) chnget_opcode_init_S, (SUBR) NULL, (SUBR) NULL               },
+ {  "chnset",      0xFFFB,              0,      NULL,           NULL,
+    (SUBR) NULL, (SUBR) NULL, (SUBR) NULL                               },
+ {  "chnset.i",    S(CHNGET),           1,      "",             "iS",
+    (SUBR) chnset_opcode_init_i, (SUBR) NULL, (SUBR) NULL               },
+ {  "chnset.r",    S(CHNGET),           1,      "",             "iS",
+    (SUBR) chnset_opcode_init_i, (SUBR) NULL, (SUBR) NULL               },
+ {  "chnset.c",    S(CHNGET),           1,      "",             "iS",
+    (SUBR) chnset_opcode_init_i, (SUBR) NULL, (SUBR) NULL               },
+ {  "chnset.k",    S(CHNGET),           3,      "",             "kS",
+    (SUBR) chnset_opcode_init_k, (SUBR) notinit_opcode_stub, (SUBR) NULL },
+ {  "chnset.a",    S(CHNGET),           5,      "",             "aS",
+    (SUBR) chnset_opcode_init_a, (SUBR) notinit_opcode_stub, (SUBR) NULL },
+ {  "chnset.S",    S(CHNGET),           1,      "",             "SS",
+    (SUBR) chnset_opcode_init_S, (SUBR) NULL, (SUBR) NULL               },
+ {  "chn_k",       S(CHN_OPCODE_K),     1,      "",             "Sioooo",
+    (SUBR) chn_k_opcode_init, (SUBR) NULL, (SUBR) NULL                  },
+ {  "chn_a",       S(CHN_OPCODE),       1,      "",             "Si",
+    (SUBR) chn_a_opcode_init, (SUBR) NULL, (SUBR) NULL                  },
+ {  "chn_S",       S(CHN_OPCODE),       1,      "",             "Si",
+    (SUBR) chn_S_opcode_init, (SUBR) NULL, (SUBR) NULL                  },
+ {  "chnexport",   0xFFFF,              0,      NULL,           NULL,
+    (SUBR) NULL, (SUBR) NULL, (SUBR) NULL                               },
+ {  "chnexport.i", S(CHNEXPORT_OPCODE), 1,      "i",            "Sioooo",
+    (SUBR) chnexport_opcode_init, (SUBR) NULL, (SUBR) NULL              },
+ {  "chnexport.k", S(CHNEXPORT_OPCODE), 1,      "k",            "Sioooo",
+    (SUBR) chnexport_opcode_init, (SUBR) NULL, (SUBR) NULL              },
+ {  "chnexport.a", S(CHNEXPORT_OPCODE), 1,      "a",            "Si",
+    (SUBR) chnexport_opcode_init, (SUBR) NULL, (SUBR) NULL              },
+ {  "chnexport.S", S(CHNEXPORT_OPCODE), 1,      "S",            "Si",
+    (SUBR) chnexport_opcode_init, (SUBR) NULL, (SUBR) NULL              },
+ {  "chnparams",   S(CHNPARAMS_OPCODE), 1,      "iiiiii",       "S",
+    (SUBR) chnparams_opcode_init, (SUBR) NULL, (SUBR) NULL              },
  /* terminate list */
  {  NULL, 0, 0, NULL, NULL, (SUBR) NULL, (SUBR) NULL, (SUBR) NULL       }
 };
